--- a/danse/maternelle/style-bootstrap.css
+++ b/danse/maternelle/style-bootstrap.css
@@ -6,7 +6,7 @@ body {
 
 .col-lg-3 img {
     width: 80%;
-    margin: 2.0rem;
+    margin: 0.6rem;
 }
 
 .centerpic {
@@ -16,8 +16,7 @@ body {
 @media (max-width: 992px) {
     .col-lg-3 img {
 	width: 35%;
-	margin-left: 0.2rem;
-    }
+   }
     .img-thumbnail {
 	padding:0.5px;
     }
