--- a/danse/penibilite/style-bootstrap.css
+++ b/danse/penibilite/style-bootstrap.css
@@ -13,7 +13,6 @@ body {
 @media (max-width: 992px) {
     .col-lg-3 img {
 	width: 15%;
-	margin-left: 0.2rem;
     }
     .img-thumbnail {
 	padding:0.5px;
